Fixes background image stretching in all views with a script and overflow-y: auto

--- a/less/site.less
+++ b/less/site.less
@@ -34,9 +34,6 @@ h1 {
     margin-top: 0;
     width: 100%;
   }
-  @media (max-width: 744px) {
-    display: none;
-  }
   .menu {
     padding-top: 10px;
     margin-bottom: -9999px;
@@ -66,6 +63,10 @@ mark.white {
 
 .box-shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.text-shadow {
+  text-shadow: 1px 2px 3px #000000;
 }
 
 .flexcontainer-wrap {
@@ -195,6 +196,7 @@ mark.white {
 
 .content {
   width: 100%;
+  overflow-y: auto;
 }
 
 /* tracks view */
